--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "webpack": "^4.21.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.9"
+  },
+  "dependencies": {
+    "uuid": "^3.3.2"
   }
 }
