--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@babel/preset-env": "^7.1.0",
     "babel-loader": "^8.0.4",
     "css-loader": "^1.0.0",
+    "redux-devtools": "^3.4.1",
     "style-loader": "^0.23.1",
     "webpack": "^4.21.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.9"
   },
   "dependencies": {
+    "redux": "^4.0.1",
     "uuid": "^3.3.2"
   }
 }
