Add deploy to s3 npm script

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --open",
-    "build": "webpack"
+    "build": "webpack",
+    "deploy": "npm run build && aws s3 sync dist/ s3://do-stuff"
   },
   "author": "Osman",
   "license": "ISC",
