--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "moment": "^2.22.2",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
+    "socket.io-client": "^2.1.1",
     "uuid": "^3.3.2"
   }
 }
